<resources>
    <string name="interstitial_ad_unit_id">ca-app-pub-7925262601843227/8982938397</string>
    <string name="app_name">Hangman</string>
    <string name="drawer_open">Open menu</string>
    <string name="drawer_close">Close menu</string>
    <string name="opt_movies">Movies</string>
    <string name="opt_countries">Countries</string>
    <string name="opt_capitals">Capitals</string>
    <string name="opt_cars">Cars</string>
    <string name="opt_fruits">Fruits</string>
    <string name="opt_celebs">Celebs</string>
    <string name="opt_seas">Seas</string>
    <string name="opt_animals">Animals</string>
    <string name="games_won">GAMES WON: </string>
    <string name="games_lost">GAMES LOST: </string>
    <string name="more_games">More games from this developer</string>
    <string name="clear_data">Clear stats</string>
    <string name="hide_letter">Hide first and last letter</string>
    <string name="easy">Easy</string>
    <string name="classic_keyboard">Classic keyboard</string>
    <string name="write_word">Write one or more words to guess!</string>
    <string name="longer_word">Write longer word!</string>
    <string name="start">Start</string>
    <string name="delete">Delete</string>
    <string name="word">WORD</string>
    <string name="status">STATUS</string>
    <string name="new_game">New Game</string>
    <string name="logo">Logo</string>
    <string name="won">You Won</string>
    <string name="lose">You Lost</string>
    <string name="exit">Exit?XXX</string>
    <string name="exit_msg">The game will be counted as lost!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string-array name="activity_array">
        <item>Play alone</item>
        <item>Play with friend</item>
    </string-array>
    <string-array name="movies">
        <item>the wizard of oz</item>
        <item>citizen kane</item>
        <item>the godfather</item>
        <item>the third man</item>
        <item>modern times</item>
        <item>all about eve</item>
        <item>metropolis</item>
        <item>kignsman</item>
        <item>singin in the rain</item>
        <item>the adventures of robin hood</item>
        <item>birdman</item>
        <item>north by northwest</item>
        <item>king kong</item>
        <item>sunset boulevard</item>
        <item>rear window</item>
        <item>big hero</item>
        <item>whiplash</item>
        <item>toy story</item>
        <item>the imitation game</item>
        <item>the bride of frankenstein</item>
        <item>boyhood</item>
        <item>snow white and the seven dwarfs</item>
        <item>the theory of everything</item>
        <item>the treasure of the sierra madre</item>
        <item>the last samurai</item>
        <item>american sniper</item>
        <item>on the waterfront</item>
        <item>up</item>
        <item>lawrence of arabia</item>
        <item>the night of the hunter</item>
        <item>apocalypse now</item>
        <item>vertigo</item>
        <item>frankenstein</item>
        <item>rebecca</item>
        <item>a street car named desire</item>
        <item>the wrestler</item>
        <item>the grapes of wrath</item>
        <item>the conformist</item>
        <item>finding nemo</item>
        <item>the red shoes</item>
        <item>pinocchio</item>
        <item>jaws</item>
        <item>the wages of fear</item>
        <item>anatomy of amurder</item>
        <item>chinatown</item>
        <item>the rules of the game</item>
        <item>battleship potemkin</item>
        <item>man on wire</item>
        <item>the last picture show</item>
        <item>the leopard</item>
        <item>roman holiday</item>
        <item>taxi driver</item>
        <item>the goldrush</item>
        <item>the searchers</item>
        <item>cool hand luke</item>
        <item>annie hall</item>
        <item>the artist</item>
        <item>the best years of our lives</item>
        <item>sweet smell of success</item>
        <item>life itself</item>
        <item>mary poppins</item>
        <item>let the rightone in</item>
        <item>before midnight</item>
        <item>strangers on a train</item>
        <item>playtime</item>
        <item>the terminator</item>
        <item>the wildbunch</item>
        <item>city lights</item>
        <item>mud</item>
        <item>raging bull</item>
        <item>bad lands</item>
        <item>invasion of the body snatchers</item>
        <item>the french connection</item>
        <item>aliens</item>
        <item>airplane</item>
        <item>the discreet charm of the bourgeoisie</item>
        <item>mean streets</item>
        <item>his girl friday</item>
        <item>the manchurian candidate</item>
        <item>once upon a time in the west</item>
        <item>the conversation</item>
        <item>eyes without a face</item>
        <item>the sweet hereafter</item>
        <item>forbidden planet</item>
    </string-array>
    <string-array name="celebs">
        <item>adam brody</item>
        <item>adam levine</item>
        <item>al pacino</item>
        <item>alec baldwin</item>
        <item>antonio banderas</item>
        <item>ashton kutcher</item>
        <item>barack obama</item>
        <item>ben affleck</item>
        <item>brad pitt</item>
        <item>bradley cooper</item>
        <item>bruce willis</item>
        <item>chad michael murrey</item>
        <item>charlie sheen</item>
        <item>chris brown</item>
        <item>christian bale</item>
        <item>colin farrell</item>
        <item>cristiano ronaldo</item>
        <item>cuba gooding jr.</item>
        <item>daniel radcliffe</item>
        <item>danny devito</item>
        <item>david beckham</item>
        <item>david carradine</item>
        <item>david guetta</item>
        <item>david schwimmer</item>
        <item>dolph lundgren</item>
        <item>dwayne johnson</item>
        <item>eminem</item>
        <item>ewan mcgregor</item>
        <item>gary oldman</item>
        <item>geaorge clooney</item>
        <item>geaorge michael</item>
        <item>hugh jackman</item>
        <item>hugh laurie</item>
        <item>ian somerhalder</item>
        <item>jack black</item>
        <item>jack nicholson</item>
        <item>jackie chan</item>
        <item>jake gyllenhaal</item>
        <item>james marsden</item>
        <item>james woods</item>
        <item>jasen biggs</item>
        <item>jay z</item>
        <item>jeff goldblum</item>
        <item>jim parsons</item>
        <item>johnny depp</item>
        <item>justin bieber</item>
        <item>justin timberlake</item>
        <item>kanye west</item>
        <item>keanu reevs</item>
        <item>kevin bacon</item>
        <item>kurt russell</item>
        <item>leonardo dicaprio</item>
        <item>lionel richie</item>
        <item>macauley culkin</item>
        <item>matt leblanc</item>
        <item>matthew broderick</item>
        <item>matthew mcconaughey</item>
        <item>michael jackson</item>
        <item>morgan freeman</item>
        <item>neil patrick harris</item>
        <item>orlando bloom</item>
        <item>paul rudd</item>
        <item>paul walker</item>
        <item>psy</item>
        <item>quentin tarantino</item>
        <item>robert de niro</item>
        <item>robert downey jr.</item>
        <item>robert pattinson</item>
        <item>russell crowe</item>
        <item>sean penn</item>
        <item>seann william scott</item>
        <item>snoop dogg</item>
        <item>tom cruise</item>
        <item>tom hanks</item>
        <item>tommy lee johnes</item>
        <item>vin diesel</item>
        <item>will smith</item>
        <item>willem dafoe</item>
        <item>wiz khalifa</item>
        <item>zac efron</item>
        <item>adele</item>
        <item>adriana lima</item>
        <item>alyson hannigan</item>
        <item>alyssa milano</item>
        <item>amy winehouse</item>
        <item>angelina jolie</item>
        <item>ashley tisdale</item>
        <item>avril lavine</item>
        <item>beyonce knowles</item>
        <item>britney spears</item>
        <item>cameron diaz</item>
        <item>courtney cox</item>
        <item>demi lovato</item>
        <item>demi moore</item>
        <item>emma watson</item>
        <item>eva longoria</item>
        <item>eva mendes</item>
        <item>gwyneth paltrow</item>
        <item>halle berry</item>
        <item>hayden panettiere</item>
        <item>heidi klum</item>
        <item>jennifer aniston</item>
        <item>jennifer lopez</item>
        <item>jennifer love hewitt</item>
        <item>jenny mccarthy</item>
        <item>jessica alba</item>
        <item>jessica biel</item>
        <item>julia roberts</item>
        <item>kaley cuocu</item>
        <item>kate moss</item>
        <item>kate winslet</item>
        <item>katie holmes</item>
        <item>katy perry</item>
        <item>kesha</item>
        <item>kim kardashian</item>
        <item>kirsten dunst</item>
        <item>kristen stewart</item>
        <item>lady gaga</item>
        <item>lindsey lohan</item>
        <item>lucy liu</item>
        <item>madonna</item>
        <item>mariah carey</item>
        <item>melinda clarke</item>
        <item>miley cyrus</item>
        <item>naomi watts</item>
        <item>nicki minaj</item>
        <item>nicole scherzinger</item>
        <item>nina dobrev</item>
        <item>paris hilton</item>
        <item>rachel bilson</item>
        <item>reese witherspoon</item>
        <item>rihanna</item>
        <item>scarlett johansson</item>
        <item>selena gomez</item>
        <item>taylor swift</item>
        <item>vanessa hudgens</item>
        <item>victoria beckham</item>
        <item>whoopi goldberg</item>
    </string-array>
    <string-array name="cars">
        <item>gillet</item>
        <item>tatra</item>
        <item>bugatti</item>
        <item>citroen</item>
        <item>matra</item>
        <item>peugeot</item>
        <item>renault</item>
        <item>audi</item>
        <item>barkas</item>
        <item>bitter</item>
        <item>borgward</item>
        <item>heinkel</item>
        <item>maybach</item>
        <item>mercedes</item>
        <item>opel</item>
        <item>porsche</item>
        <item>simson</item>
        <item>trabant</item>
        <item>volkswagen</item>
        <item>wartburg</item>
        <item>ferrari</item>
        <item>fiat</item>
        <item>lancia</item>
        <item>maserati</item>
        <item>pagani</item>
        <item>acura</item>
        <item>daihatsu</item>
        <item>honda</item>
        <item>infiniti</item>
        <item>isuzu</item>
        <item>lexus</item>
        <item>mitsubishi</item>
        <item>nissan</item>
        <item>subaru</item>
        <item>suzuki</item>
        <item>toyota</item>
        <item>yamaha</item>
        <item>kamaz</item>
        <item>lada</item>
        <item>volga</item>
        <item>seat</item>
        <item>saab</item>
        <item>volvo</item>
        <item>bentley</item>
        <item>bristol</item>
        <item>jaguar</item>
        <item>lotus</item>
        <item>motgan</item>
        <item>singer</item>
        <item>vauxhall</item>
        <item>cadillac</item>
        <item>chevrolet</item>
        <item>chrysler</item>
        <item>dodge</item>
        <item>ford</item>
        <item>jeep</item>
        <item>scion</item>
        <item>lincoln</item>
    </string-array>
</resources>