<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/b_download"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/cb_keyboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/classic_keyboard"
                android:textColor="#333333"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/cb_easy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/easy"
                android:textColor="#333333"
                android:textSize="16sp" />
            
            <CheckBox
                android:id="@+id/cb_letters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/hide_letter"
                android:textColor="#333333"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_separator"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:background="#333333"
                android:text="" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tx_games_won"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1.84"
                    android:gravity="end|center"
                    android:text="@string/games_won"
                    android:textColor="#333333"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_games_won"
                    android:layout_width="118dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.10"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="#333333"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tx_games_lost"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.95"
                    android:gravity="end|center"
                    android:text="@string/games_lost"
                    android:textColor="#333333"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_games_lost"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.02"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="#333333"
                    android:textSize="24sp" />

            </LinearLayout>

            <Button
                android:id="@+id/b_clear"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="#4C64A2"
                android:text="@string/clear_data"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/b_download"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#4C64A2"
        android:text="@string/more_games"
        android:textColor="#FFFFFF"
        android:textSize="14dp" />

</RelativeLayout>