<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#eeeeee" >

            <ScrollView
                android:id="@+id/scrollView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/b_stats"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        android:weightSum="2" >

                        <Button
                            android:id="@+id/b_countries"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:background="#4C64A2"
                            android:text="@string/opt_countries"
                            android:textColor="#FFFFFF"
                            android:textSize="24dp" />

                        <Button
                            android:id="@+id/b_cities"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#4C64A2"
                            android:text="@string/opt_capitals"
                            android:textColor="#FFFFFF"
                            android:textSize="24dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:layout_marginTop="-10dp"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        android:weightSum="2" >

                        <Button
                            android:id="@+id/b_movies"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:background="#4C64A2"
                            android:text="@string/opt_movies"
                            android:textColor="#FFFFFF"
                            android:textSize="24dp" />

                        <Button
                            android:id="@+id/b_cars"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#4C64A2"
                            android:text="@string/opt_cars"
                            android:textColor="#FFFFFF"
                            android:textSize="24dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:layout_marginTop="-10dp"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        android:weightSum="2" >

                        <Button
                            android:id="@+id/b_fruits"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:background="#4C64A2"
                            android:text="@string/opt_fruits"
                            android:textColor="#FFFFFF"
                            android:textSize="24dp" />

                        <Button
                            android:id="@+id/b_celebs"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#4C64A2"
                            android:text="@string/opt_celebs"
                            android:textColor="#FFFFFF"
                            android:textSize="24dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:layout_marginTop="-10dp"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        android:weightSum="2" >

                        <Button
                            android:id="@+id/b_seas"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:background="#4C64A2"
                            android:text="@string/opt_seas"
                            android:textColor="#FFFFFF"
                            android:textSize="24dp" />

                        <Button
                            android:id="@+id/b_animals"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#4C64A2"
                            android:text="@string/opt_animals"
                            android:textColor="#FFFFFF"
                            android:textSize="24dp" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </FrameLayout>

    <!-- The navigation drawer -->

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#eee"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />

</android.support.v4.widget.DrawerLayout>